--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -3,7 +3,7 @@ repo_url: https://github.com/LumiteDubbz/NukoBot
 site_description: "The documentation site for the Nuko Discord bot and programming project."
 site_author: Lumite_#0187
 copyright: Copyright (C) 2019 Lumite
-theme: material
+theme: readthedocs
 nav:
 - Home: 'index.md'
 - Setup: 'setup.md'
